# EchoType

./: CLAUDE.md
echokey/: Cargo.toml  README.md
echokey/src/: autostart.rs  clipboard.rs  config.rs  gui.rs  keyboard.rs  keyboard_win.rs  lib.rs  logger.rs  main.rs  tray.rs
playground/: CLAUDE.md  DEVLOG_2026-01-01.md  build_log.txt
playground/.claude/: settings.local.json
playground/ClipboardMonitor/: CMakeLists.txt  IMPLEMENTATION_LOG.md  README.md  build.bat  main.cpp  storage.cpp  utils.h
playground/ClipboardMonitor/context/: context_data.h  context_manager.cpp
playground/ClipboardMonitor/context/adapters/: browser_adapter.cpp  wechat_adapter.cpp
playground/Test3/: clipboard_history.json
playground/test1/: clipboard_history.json
playground/test1/Test2/: clipboard_history.json
