[package]
name = "echokey"
version = "0.2.0"
edition = "2021"
description = "你打下的每一个字，都有回声 - 系统级键盘输入记录工具"
authors = ["EchoKey Team"]
license = "MIT"
repository = "https://github.com/your-username/echokey"

# Windows 专用：隐藏控制台窗口
[[bin]]
name = "echokey"
path = "src/main.rs"

[dependencies]
# 时间处理
chrono = "0.4"

# 获取系统目录（如 LOCALAPPDATA）
dirs = "5.0"

# 剪贴板操作
arboard = "3.4"

# 跨线程通道
crossbeam-channel = "0.5"

# GUI 框架
eframe = "0.29"

# 全局状态
once_cell = "1.19"

# 图标处理
image = "0.25"

# 系统托盘
tray-icon = "0.19"
muda = "0.16"

# Windows 注册表操作（开机自启动）
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Windows 原生 API
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_UI_Shell",
]

[profile.release]
# 优化大小，减少内存占用
opt-level = "z"
lto = true
codegen-units = 1
strip = true
